--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,514 @@
-.App {
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img:not(.nav-logo){
+  width:100%;
+  display:block;
+}
+
+h1,h2,h3,h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 0.875rem;
+}
+
+p {
+  margin-bottom: 1.25rem;
+  color: var(--clr-grey-5);
+}
+
+@media screen and (min-width:800px) {
+  h1 { font-size: 4rem;}
+  h2 { font-size: 2.5rem;}
+  h3 { font-size: 1.75rem;}
+  h4 { font-size: 1rem;}
+  body {font-size:1rem;}
+  h1,h2,h3,h4 {line-height: 1;}
+}
+
+.btn {
+  text-transform: uppercase;
+  background: var(--clr-primary-5);
+  color: var(--clr-white);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid transparent;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+}
+
+.btn:hover {
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-8);
+}
+
+/** section */
+.section{
+  padding: 5rem 0;
+  scroll-margin-bottom: 4rem;
+}
+
+.section-title {
   text-align: center;
+  margin-bottom: 4rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section-title h2 {
+  text-transform: uppercase;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.section-title span {
+  color: var(--clr-grey-6);
 }
 
-.App-header {
-  background-color: #282c34;
+.section-center {
+  width: 90vw;
+  margin:0 auto;
+  max-width: 1100px;
+}
+
+@media screen and (min-width:992px){
+  .section-center{width: 95vw;}
+}
+
+/**hero*/
+.hero {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* min-height: 50vh;
+  max-height: 200px; */
+  background: var(--clr-primary-7);
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.hero-banner {
+  text-align: center;
+  color: var(--clr-white);
+  padding: 0 3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.hero-banner h1 {
+  text-transform: uppercase;
+}
+
+.hero-banner p {
+  max-width: 35rem;
+  margin-left: auto;
+  margin-right: auto;
+  color:var(--clr-white);
+  letter-spacing: var(--spacing);
+}
+
+.hero-btn {
+  padding: 0.9rem 1.6rem;
+  font-size: 1.25rem;
+  background: var(--clr-white);
+  color: var(--clr-primary-5);
+}
+
+.hero-btn:hover {
+  background: transparent;
+  color: var(--clr-white);
+  border-color:var(--clr-white);
+}
+
+@media screen and (min-width:768px) {
+.hero { 
+  background: linear-gradient(rgba(44,174,186,0.7),rgba(0,0,0,0.7)), url("../src/images/28-4928x3264.jpg") center/cover no-repeat;
+}
+/* url("../images/28-4928x3264.jpg") */
+
+.hero-banner{padding: 0;}
+.hero-banner p {max-width: 45rem;}
+}
+
+/** about  */
+
+.about-img, .about-info {
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width:992px) {
+.about-center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2rem;
+}
+.about-img, .about-info {
+  margin-bottom: 0;
+}
+}
+
+@media screen and (min-width:1170px) {
+.about-img {
+  position:relative;
+}
+
+.about-img::before {
+  content:'';
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  border: 0.5rem solid var(--clr-primary-5);
+  box-sizing: border-box;
+  top: -1.5rem;
+  left: -1.5rem;
+
+}
+.about-photo {
+  position: relative;
+}
+}
+
+/** services */
+.services {
+  background: var(--clr-grey-10);
+}
+
+.service {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.service-icon {
+  background: var(--clr-primary-5);
+  color: var(--clr-primary-1);
+  padding: 0.5rem;
+  display: inline-block;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  align-self: start;  /** not much difference ??? */
+}
+
+.service-text {
+  max-width: 20rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width:576px) {
+  .services-center{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+  .service-icon{
+      font-size: 4rem;
+  }
+
+  .service{
+      margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width:992px) {
+  .services-center{
+      grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width:1170px) {
+  .service {
+      display :flex;
+      text-align:left;
+      gap: 1rem;
+  }
+  .service-icon {
+      align-self: start;
+  }
+  .service-info {
+      padding-left: 1rem;
+  }
+  .service-title {
+      margin-bottom: 0.5rem;
+  }
+}
+
+/* .services-center { */
+  /* display :flex; */
+  /* text-align:left; * not much difference  ??? */
+  /* justify-content: center;  *self put into center */
+/* } */
+
+/** featured tours*/
+.tour-card {
+  transition: var(--transition);
+  background: var(--clr-grey-8);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+  margin-bottom: 2rem;
+}
+
+.tour-card:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.6);
+  transform: scale(1.02);
+}
+
+.tour-img-container {
+  position: relative;
+}
+
+.tour-img {
+  height: 15rem;
+  object-fit: cover;
+}
+
+.tour-date {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: var(--clr-primary-8);
+  color:var(--clr-primary-1);
+  text-transform: capitalize;
+  padding: 0.25rem 0.5rem;
+  margin-bottom: 0;
+}
+
+.tour-info {
+  padding: 1.25rem 1.5rem;
+}
+
+.tours-center{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap:15px; 
+}
+/** .tour-title {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+} */
+
+.tour-info p, .tour-info h4{
+  margin-bottom: 0.75rem ;
+  line-height: 1.25;
+}
+
+.tour-info p {
+  color:var(--clr-grey-2);
+}
+
+.tour-footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.tour-footer p {
+  line-height: 0;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  color: var(--clr-primary-5);
+}
+
+.tour-footer p span {
+  margin-right: 0.25rem;
+}
+
+@media screen and (min-width:768px) {
+  .tours-center{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap:2rem;
+  }
+}
+
+@media screen and (min-width:1170px) {
+  .tours-center {
+      grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+/** footer */
+.footer{
+  background: var(--clr-grey-7);
+  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.footer-links, .footer-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.footer-link {
+  color: var(--clr-white);
+  text-transform: capitalize;
+  font-size: 1rem;
+  margin-right: 1rem;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+}
+
+.footer-icon {
+  font-size:2rem;
+  margin-right: 1rem;
+  color:var(--clr-white);
+  transition: var(--transition);
+}
+
+.footer-link:hover, .footer-icon:hover {
+  color:var(--clr-primary-5);
+}
+
+.copyright {
+  text-transform: uppercase;
+  letter-spacing: var(--spacing);
+  color:var(--clr-white);
+}
+
+.copyright span {
+  margin-left:0.5rem;
+}
+
+.navbar {
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  background: var(--clr-white);
+  box-shadow: var(--dark-shadow);
+  z-index: 2;
+  height: 4rem;
+  display: flex;
+  align-items:center;
+}
+
+.nav-icons {
+  display: none;
+}
+
+.nav-center {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 0 auto;
+}
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-toggle {
+  background: transparent;
+  border:none;
+  outline: none;
+  font-size: 1.5rem;
+  color: var(--clr-primary-5);
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.nav-toggle:hover {
+  transform: scale(1.2);
+}
+
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+
+.nav-link {
+  display: block;
+  padding: 1rem 2rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+  color:var(--clr-grey-1);
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.nav-link:hover{
+  color:var(--clr-primary-1);
+  background: var(--clr-primary-8);
+  padding-left: 2.25rem;
+}
+
+.nav-logo {
+  width: 50px;
+  height: auto;
+}
+
+@media screen and (max-width:992px) {
+.show-links {
+  position: absolute;
+  height: 280px;
+  width: 75vw;
+}
+}
+
+@media screen and (min-width:992px) {
+  .nav-toggle {
+      display: none;
+  }
+  .nav-links {
+      height: auto;
+      display: flex;
+  }
+  .nav-center {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  .nav-header {
+      padding:0 0;
+  }
+  .nav-link {
+      padding:0 0;
+      margin-right: 0.7rem;
+  }
+
+  .nav-link:hover {
+      padding: 0;
+      color: var(--clr-primary-5);
+      background: transparent;
+  }
+
+  .nav-icons {
+      display: flex;
+  }
+  
+  .nav-icon {
+      margin-right: 0.7rem;
+      color: var(--clr-primary-5);
+      font-size: 1.2rem;
+      transition: var(--transition);
+  }
+
+  .nav-icon:hover {
+      color:var(--clr-primary-8);
   }
 }
